# rust-aide-demo

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  atlas.hcl  compose.yaml  mise.toml  schema.sql
app_state/: Cargo.toml
app_state/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/user/: error.rs  mod.rs  repository.rs
handler/: Cargo.toml
handler/src/: error.rs  hello.rs  lib.rs  user.rs
handler/tests/: hello_test.rs  user_test.rs
handler/tests/helper/: mod.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  slack.rs
infrastructure/src/db/: user.rs
migrations/: 20260308140722.sql  atlas.sum
usecase/: Cargo.toml
usecase/src/: error.rs  lib.rs  notify.rs  user.rs
