[package]
name = "rust-aide-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "bin/app.rs"

[workspace]
members = ["domain", "handler", "infrastructure", "usecase"]


[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[dependencies]
handler.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
