[package]
name = "rust-aide-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "bin/app.rs"

[workspace]
members = ["app_state", "domain", "handler", "infrastructure", "usecase"]


[workspace.dependencies]
app_state = { path = "app_state" }
handler = { path = "handler" }
domain = { path = "domain" }
infrastructure = { path = "infrastructure" }
usecase = { path = "usecase" }

anyhow = "1.0.102"
axum = "0.8.8"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
rstest = "0.26.1"
uuid = { version = "1.22.0", features = ["v7"] }
derive_more = { version = "2.1.1", features = ["from", "into"] }
email_address = "0.2.9"
async-trait = "0.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
aide = { version = "0.16.0-alpha.2", features = ["axum", "axum-json", "swagger"] }
schemars = "1.0.4"
tower = { version = "0.5", features = ["util"] }
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
mockall = "0.14.0"

[dependencies]
app_state.workspace = true
handler.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aide.workspace = true
